--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
   <h1>Welcome to Riyadh</h1>
     <!-- SUB HEAD -->
   <h2>Where A Traditional Past Meets A Modern Future.</h2>
+
     <div id="content">
 
       <!-- IMAGES, SMALL SUB HEADS, PARAGRAPHS, LINKS -->
-
+    <img src= "/transit.jpg" alt= "Modern Transit">
     </div>
   </div>
 </body>
